--- a/transaction/makefile.cmk
+++ b/transaction/makefile.cmk
@@ -22,6 +22,7 @@ SetLibraryPaths( ["bin",
 #
 Compile( "source/manager/manager.cpp", "obj/manager/manager.o")
 Compile( "source/manager/state.cpp", "obj/manager/state.o")
+Compile( "source/manager/handle.cpp", "obj/manager/handle.o")
 Compile( "source/manager/action.cpp", "obj/manager/action.o")
 Compile( "source/manager/log.cpp", "obj/manager/log.o")
 
@@ -29,6 +30,7 @@ LinkArchive( "manager-archive",
      [
       "obj/manager/manager.o",
       "obj/manager/state.o",
+      "obj/manager/handle.o",
       "obj/manager/action.o",
       "obj/manager/log.o",
       ])
