--- a/test/makefile.cmk
+++ b/test/makefile.cmk
@@ -2,24 +2,21 @@ from casual.make.functiondefinitions import *
 
 Include( "$(CASUAL_BUILD_ENVIRONMENT)")
 
-
-INCLUDE_PATHS= ["include",
+SetIncludePaths( ["include",
 	"../common/include",
 	"../serviceframework/include",
 	"../xatmi/include",
 	"$(YAML_INCLUDE_PATH)",
-    "$(UNITTEST_INCLUDE_PATH)"]
-	
-LIBRARY_PATHS= ["../xatmi/bin",
+    "$(UNITTEST_INCLUDE_PATH)"
+    ])
+SetLibraryPaths( ["../xatmi/bin",
 	"../common/bin",
 	"../buffer/bin",
 	"../serviceframework/bin",
 	"$(YAML_LIBRARY_PATH)",
 	"$(JSON_LIBRARY_PATH)",
-	"$(IBM_DB_LIB)"]
-
-SetIncludePaths( INCLUDE_PATHS)
-SetLibraryPaths( LIBRARY_PATHS)
+	"$(IBM_DB_LIB)"
+	])
 
 Compile( "source/template_server.cpp", "obj/template_server.o")
 
@@ -27,7 +24,11 @@ Compile( "source/template_server.cpp", "obj/template_server.o")
 LinkAtmiServerResource( "test",
 	[ "obj/template_server.o"],
 	[ "casual-xatmi", "casual-common"],
-	"casual_test1,casual_test2,casual_test3", "rm-mockup")
+	[
+	"casual_test1",
+	"casual_test2",
+	"casual_test3",
+	], ["rm-mockup"])
 
 
 
@@ -58,11 +59,16 @@ Compile( "source/template_sf_server_implementation.cpp", "obj/template_sf_server
 LinkAtmiServer("sf_test",
     ["obj/template_sf_server.o",
     "obj/template_sf_server_implementation.o"],
-    ["sf-test-vo",
+    [
+	"sf-test-vo",
     "casual-xatmi",
     "casual-common",
-    "casual-sf"],
-    "casual_sf_test1,casual_sf_test2")
+    "casual-sf"
+    ],
+	[
+    "casual_sf_test1",
+    "casual_sf_test2"
+    ])
 
 
 	
@@ -103,7 +109,7 @@ LinkAtmiServer("sf-detoct-test-server",
     ["sf-test-vo",
     "casual-sf",
     "casual-xatmi"],
-    "casual_sf_test1,casual_sf_test2")
+    ["casual_sf_test1","casual_sf_test2"])
 
 #
 # Install
