--- a/serviceframework/makefile.cmk
+++ b/serviceframework/makefile.cmk
@@ -24,6 +24,7 @@ Compile( "source/archive.cpp", "obj/archive.o")
 Compile( "source/archive_maker.cpp", "obj/archive_maker.o")
 Compile( "source/buffer.cpp", "obj/buffer.o")
 Compile( "source/server.cpp", "obj/server.o")
+Compile( "source/proxy.cpp", "obj/proxy.o")
 Compile( "source/service.cpp", "obj/service.o")
 Compile( "source/service_protocol.cpp", "obj/service_protocol.o")
 Compile( "source/archive_log.cpp", "obj/archive_log.o")
@@ -37,6 +38,7 @@ LinkLibrary( "casual-sf",
     "obj/archive_maker.o",
     "obj/buffer.o",
     "obj/server.o",
+    "obj/proxy.o",
     "obj/service.o",
     "obj/service_protocol.o",
     "obj/archive_log.o",
