--- a/test/makefile.cmk
+++ b/test/makefile.cmk
@@ -31,7 +31,7 @@ Compile( "source/template_server.cpp", "obj/template_server.o")
 
 LinkAtmiServerResource( "test",
 	[ "obj/template_server.o"],
-	[ "casual-xatmi", "casual-common"],
+	[ "casual-xatmi", "casual-common", "casual-sf"],
 	[
 	"casual_test1",
 	"casual_test2",
