Refinded compile time transaction-semantics for services
4 types of semantic
- auto : correlates to tuxedo auto
- join : joins transaction if there is one
- atomic : starts a new transaction regardless
- none : don't start or join any transaction

--- a/test/source/template_server.yaml
+++ b/test/source/template_server.yaml
@@ -3,10 +3,14 @@ server:
   type: casual-sf
   services:
     - name: casual_test1
+      transaction: join
       
       
     - name: casual_test2
+      transaction: atomic
     
-    - name: casual_test3
+    - name: casual-test3
+      function: casual_test3
+      transaction: none
 
 
