did some minor cleanups. Made callee::handle::basic_call move safe

--- a/test/source/template_server.yaml
+++ b/test/source/template_server.yaml
@@ -7,7 +7,7 @@ server:
       
       
     - name: casual_test2
-      transaction: atomic
+      transaction: auto
     
     - name: casual-test3
       function: casual_test3
