some minor refactoring

--- a/broker/makefile.cmk
+++ b/broker/makefile.cmk
@@ -39,22 +39,19 @@ SetLibraryPaths( LIBRARY_PATHS)
 #    ,\
 #    casual-sf ) 
 	
-
-Compile( "source/broker.cpp", "obj/broker.o")
-Compile( "source/broker_main.cpp", "obj/broker_main.o")
-Compile( "source/action.cpp", "obj/action.o")
-
-Compile( "admin/source/adminserverimplementation.cpp", "obj/adminserverimplementation.o")
-Compile( "admin/source/adminserver.cpp", "obj/adminserver.o")
-
+casual_broker_objectfiles = [
+    Compile( "source/broker.cpp", "obj/broker.o"),
+    Compile( "source/broker_main.cpp", "obj/broker_main.o"),
+    Compile( "source/action.cpp", "obj/action.o"),
+    
+    Compile( "admin/source/adminserverimplementation.cpp", "obj/adminserverimplementation.o"),
+    Compile( "admin/source/adminserver.cpp", "obj/adminserver.o"),
+]
 
 LinkExecutable( "casual-broker",
-	["obj/broker.o",
-	"obj/broker_main.o",
-	"obj/action.o",
-	"obj/adminserverimplementation.o",
-	"obj/adminserver.o"],
-	["casual-common",
+	casual_broker_objectfiles,
+	[
+     "casual-common",
 	"casual-sf",
     "casual-xatmi",
     "casual-configuration"]
@@ -66,10 +63,10 @@ LinkExecutable( "casual-broker",
 #
 # admin-terminal
 #
-Compile( "admin/source/broker_admin.cpp", "obj/broker_admin.o")
+
 
 LinkExecutable( "casual-broker-admin",
-    ["obj/broker_admin.o"],
+    [ Compile( "admin/source/broker_admin.cpp", "obj/broker_admin.o")],
     ["casual-common", "casual-sf", "casual-xatmi"])
 	
 
@@ -77,17 +74,15 @@ LinkExecutable( "casual-broker-admin",
 #
 # unittest
 #
-Compile( "unittest/isolated/source/test_broker.cpp", "unittest/isolated/obj/test_broker.o")
-Compile( "unittest/isolated/source/test_broker_confguration.cpp", "unittest/isolated/obj/test_broker_confguration.o")
-Compile( "unittest/isolated/source/test_broker_transformation.cpp", "unittest/isolated/obj/test_broker_transformation.o")
+test_casual_broker_isolated = [
+    Compile( "unittest/isolated/source/test_broker.cpp", "unittest/isolated/obj/test_broker.o"),
+    Compile( "unittest/isolated/source/test_broker_confguration.cpp", "unittest/isolated/obj/test_broker_confguration.o"),
+    Compile( "unittest/isolated/source/test_broker_transformation.cpp", "unittest/isolated/obj/test_broker_transformation.o"),
+]
 
 
-
-LinkIsolatedUnittest( "casual-broker-isolated",
-    ["obj/action.o",
-	"unittest/isolated/obj/test_broker.o",
-	"unittest/isolated/obj/test_broker_confguration.o",
-	"unittest/isolated/obj/test_broker_transformation.o"],
+LinkIsolatedUnittest( "test-casual-broker-isolated",
+    ["obj/action.o"] + test_casual_broker_isolated,
     ["casual-common", "casual-sf", "casual-configuration", "casual-mockup"])
 
 	
