--- a/configuration/makefile.cmk
+++ b/configuration/makefile.cmk
@@ -19,15 +19,14 @@ LIBRARY_PATHS = ["bin",
 SetIncludePaths( INCLUDE_PATHS)
 SetLibraryPaths( LIBRARY_PATHS)
 
-Compile( "source/domain.cpp", "obj/domain.o")
-Compile( "source/xa_switch.cpp", "obj/xa_switch.o")
-Compile( "source/serverdefinition.cpp", "obj/serverdefinition.o")
+casual_configuration_objectfiles = [
+    Compile( "source/domain.cpp", "obj/domain.o"),
+    Compile( "source/xa_switch.cpp", "obj/xa_switch.o"),
+    Compile( "source/serverdefinition.cpp", "obj/serverdefinition.o"),
+]
 
 LinkLibrary( "casual-configuration",
-    ["obj/domain.o",
-    "obj/xa_switch.o",
-    "obj/serverdefinition.o",
-    ],
+    casual_configuration_objectfiles,
     ["casual-common",
     "casual-sf"])
 
@@ -36,12 +35,13 @@ LinkLibrary( "casual-configuration",
 #
 # Unittest
 #
-Compile( "unittest/isolated/source/test_domain.cpp", "obj/test_domain.o")
-Compile( "unittest/isolated/source/test_xa_switch.cpp", "obj/test_xa_switch.o")
+test_configuration_objectfiles = [
+    Compile( "unittest/isolated/source/test_domain.cpp", "obj/test_domain.o"),
+    Compile( "unittest/isolated/source/test_xa_switch.cpp", "obj/test_xa_switch.o"),
+]
 
 LinkIsolatedUnittest( "test_configuration",
-   ["obj/test_domain.o",
-   "obj/test_xa_switch.o"],
+   test_configuration_objectfiles,
    ["casual-configuration", "casual-sf"])  
    
 #
