--- a/xatmi/makefile.cmk
+++ b/xatmi/makefile.cmk
@@ -10,31 +10,27 @@ LIBRARY_PATHS = ["bin",
 SetIncludePaths( INCLUDE_PATHS)
 SetLibraryPaths( LIBRARY_PATHS)
 
-Compile( "source/xatmi.cpp", "obj/xatmi.o")
-Compile( "source/xatmi_server.cpp", "obj/xatmi_server.o")
-
-Compile( "source/xa.cpp", "obj/xa.o")
-Compile( "source/tx.cpp", "obj/tx.o")
+casual_xatmi_objectfile = [
+	Compile( "source/xatmi.cpp", "obj/xatmi.o"),
+	Compile( "source/xatmi_server.cpp", "obj/xatmi_server.o"),
+	
+	Compile( "source/xa.cpp", "obj/xa.o"),
+	Compile( "source/tx.cpp", "obj/tx.o"),
+]
 
 LinkLibrary( "casual-xatmi",
-	[
-	"obj/xatmi.o",
-	"obj/xatmi_server.o",
-	"obj/xa.o",
-	"obj/tx.o",
-	],
+	casual_xatmi_objectfile,
 	["casual-common"])
 
 	
 #
 # unittest
 #
-Compile( "unittest/isolated/source/test_buffer.cpp", "unittest/isolated/obj/test_buffer.o")
 
 
-LinkIsolatedUnittest( "casual-xatmi-isolated",
+LinkIsolatedUnittest( "test-casual-xatmi-isolated",
     [
-    "unittest/isolated/obj/test_buffer.o",
+       Compile( "unittest/isolated/source/test_buffer.cpp", "unittest/isolated/obj/test_buffer.o"),
     ],
     ["casual-xatmi"])
 
