--- a/transaction/makefile.cmk
+++ b/transaction/makefile.cmk
@@ -27,6 +27,7 @@ manager_objecfiles = [
     Compile( "source/manager/state.cpp", "obj/manager/state.o"),
     Compile( "source/manager/action.cpp", "obj/manager/action.o"),
     Compile( "source/manager/log.cpp", "obj/manager/log.o"),
+    Compile( "source/manager/handle.cpp", "obj/manager/handle.o"),
     Compile( "source/manager/admin/admin.cpp", "obj/manager/admin/admin.o"),
     Compile( "source/manager/admin/adminimplementation.cpp", "obj/manager/admin/adminimplementation.o"),
     Compile( "source/manager/admin/vo/transaction.cpp", "obj/manager/admin/vo/transaction.o"),
@@ -82,7 +83,8 @@ LinkIsolatedUnittest( "test-casual-transaction-isolated",
      "casual-configuration", 
      "sqlite3", 
      "casual-mockup",
-     "casual-xatmi"
+     "casual-xatmi",
+     "casual-mockup-unittest-environment"
      ])
 
 
